--- a/Cloud-Config/src/main/resources/config-repo/config-druid.yml
+++ b/Cloud-Config/src/main/resources/config-repo/config-druid.yml
@@ -2,7 +2,7 @@
 spring: 
   datasource: 
     driver-class-name: com.mysql.jdbc.Driver #mysql驱动
-    url: jdbc:mysql://182.150.59.121:2236/db_sr?useUnicode=true&characterEncoding=utf-8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/db_sr?useUnicode=true&characterEncoding=utf-8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
     username: user_istore #测试
     password: istore #测试
     type: com.alibaba.druid.pool.DruidDataSource
