--- a/Cloud-Config/src/main/resources/config-repo/config-zuul.yml
+++ b/Cloud-Config/src/main/resources/config-repo/config-zuul.yml
@@ -8,7 +8,7 @@ zuul:
   routes:
     basicApi:
       path: /api/** #后台管理服务
-      serviceId: management
+      serviceId: api
       custom-sensitive-headers: true #设置允许敏感的头信息无法经过API网关进行传递
       custom-sensitive-headers: true #设置允许敏感的头信息无法经过API网关进行传递
   add-host-header: true
