--- a/Cloud-Config/src/main/resources/config-repo/config-ratelimit.yml
+++ b/Cloud-Config/src/main/resources/config-repo/config-ratelimit.yml
@@ -4,9 +4,9 @@ zuul:
       behind-proxy: true
       repository: REDIS #存储到redis
       policies: 
-        basicApi: 
-            limit: 200   # 单位时间内允许访问的个数
-            quota: 400   # 单位时间内允许访问的总时间（统计每次请求的时间综合）
-            refresh-interval: 60 # 单位时间设置
-            type: ORIGIN,USER,URL #url：请求路径限流，origin客户端ip限流，user用户限流
+        api: 
+          limit: 200   # 单位时间内允许访问的个数
+          quota: 400   # 单位时间内允许访问的总时间（统计每次请求的时间综合）
+          refresh-interval: 60 # 单位时间设置
+          type: ORIGIN,USER,URL #url：请求路径限流，origin客户端ip限流，user用户限流
         
