--- a/Cloud-Config/src/main/resources/config-repo/config-turbine.yml
+++ b/Cloud-Config/src/main/resources/config-repo/config-turbine.yml
@@ -1,7 +1,7 @@
 turbine:
   aggregator:
     cluster-config: default
-  app-config: management,dockhospital,user,Inquiry,reservation,nursing,pay
+  app-config: apifirst,apisecond #指定监控服务
   clusterNameExpression: new String("default")
   instanceUrlSuffix: 
     default: /actuator/hystrix.stream
