--- a/Cloud-Config/src/main/resources/config-repo/config-zuul.yml
+++ b/Cloud-Config/src/main/resources/config-repo/config-zuul.yml
@@ -6,9 +6,13 @@ spring:
       max-request-size: 200MB
 zuul:
   routes:
-    api: 
-      path: /api/** #验证服务
-      serviceId: api
+    apisecond: 
+      path: /apifirst/** #验证服务
+      serviceId: apifirst
+      custom-sensitive-headers: true #设置允许敏感的头信息无法经过API网关进行传递
+    apisecond: 
+      path: /apisecond/** #验证服务
+      serviceId: apisecond
       custom-sensitive-headers: true #设置允许敏感的头信息无法经过API网关进行传递
   add-host-header: true
   host:
