--- a/Cloud-Monitor/src/main/resources/bootstrap.yml
+++ b/Cloud-Monitor/src/main/resources/bootstrap.yml
@@ -1,30 +1,25 @@
 server:
-  port: 9040 #服务地址
-  tomcat:
-    basedir: /mnt/tomcat/fileupload #文件上传临时目录
-spring:
+  port: 9030 #数据聚合监控
+spring: 
   application:
-    name: apisecond
+    name: monitor
   cloud:
     config:
       discovery:
         enabled: true
         serviceId: config
       name: config
-      profile: sleuth,management
+      profile: turbine
       label: master
       fail-fast: true
       username: inthospital
       password: inthospital
-      retry:
+      retry: 
         max-attempts: 6 #配置重试次数，默认为6
         multiplier: 1.1 # 间隔乘数，默认1.1
         initial-interval: 1000  # 初始重试间隔时间，默认1000ms
         max-interval: 2000 #最大间隔时间，默认2000ms
-  jackson:
-    time-zone: GMT+8
-    date-format: yyyy-MM-dd HH:mm:ss
-eureka:
+eureka: 
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
@@ -41,5 +36,4 @@ eureka:
     eureka-server-total-connections: 200 #从Eureka 客户端到所有Eureka服务端的连接总数
     eureka-server-total-connections-per-host: 50 #从Eureka客户端到每个Eureka服务主机的连接总数
     serviceUrl:
-      defaultZone: http://staff:staff@localhost:9000/eureka/
-      
+      defaultZone: http://inthospital:inthospital@localhost:9000/eureka/
