--- a/Cloud-ApiFirst/pom.xml
+++ b/Cloud-ApiFirst/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<!-- 工具包 -->
+		<dependency>
+            <groupId>com.cloud.common</groupId>
+            <artifactId>cloud-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
