--- a/Cloud-Zuul/pom.xml
+++ b/Cloud-Zuul/pom.xml
@@ -45,14 +45,6 @@
             <artifactId>spring-cloud-zuul-ratelimit</artifactId>
             <version>1.5.0.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-         </dependency>
         <!-- swaggerAPI接口管理集成 -->
         <dependency>
 			<groupId>io.springfox</groupId>
@@ -68,6 +60,12 @@
 	    <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <!-- 工具包 -->
+        <dependency>
+            <groupId>com.cloud.common</groupId>
+            <artifactId>cloud-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 		<dependency>
