--- a/Cloud-ApiSecond/pom.xml
+++ b/Cloud-ApiSecond/pom.xml
@@ -19,10 +19,10 @@
 
 	<dependencies>
 		 <!-- 服务应用 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+		<dependency>  
+	        <groupId>org.springframework.boot</groupId>  
+	        <artifactId>spring-boot-starter-web</artifactId>  
+	    </dependency>
 		<!-- 注冊中心客戶段 -->
 	    <dependency>
 			<groupId>org.springframework.cloud</groupId>
