--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 	  <module>Cloud-ApiSecond</module>
 	  <module>Cloud-Monitor</module>
 	  <module>Cloud-Common</module>
+	  <module>Cloud-Nacos</module>
 	</modules>
 	
 	<!-- 指定中央仓库 -->
