--- a/Cloud-Apollo/pom.xml
+++ b/Cloud-Apollo/pom.xml
@@ -19,8 +19,13 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- 注册中心客户端 -->
+	    <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 	    <!--apollo依赖  -->
 	    <dependency>
