--- a/Cloud-Config/src/main/resources/config-repo/config-management.yml
+++ b/Cloud-Config/src/main/resources/config-repo/config-management.yml
@@ -2,7 +2,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: '*' #路径为 /actuator/sentinel
         #hystrix.stream
   endpoint:
     health:
