--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 	  <module>Cloud-Monitor</module>
 	  <module>Cloud-Common</module>
 	  <module>Cloud-Nacos</module>
+	  <module>Cloud-sentinel</module>
 	</modules>
 	
 	<!-- 指定中央仓库 -->
