--- a/Cloud-sentinel/pom.xml
+++ b/Cloud-sentinel/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.cloud.apifirst</groupId>
-	<artifactId>cloud-apifirst</artifactId>
+	<groupId>com.cloud.sentinel</groupId>
+	<artifactId>cloud-sentinel</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
-	<name>Cloud-ApiFirst</name>
-	<description>测试服务</description>
+	<name>cloud-sentinel</name>
+	<description>sentinel熔断器</description>
 	
 	<parent>
 		<groupId>com.cloud</groupId>
@@ -18,12 +18,12 @@
 	</parent>
 
 	<dependencies>
-	    <!-- 服务应用 -->
+		 <!-- 服务应用 -->
 		<dependency>  
 	        <groupId>org.springframework.boot</groupId>  
 	        <artifactId>spring-boot-starter-web</artifactId>  
 	    </dependency>
-		<!-- 注冊中心客戶段 -->
+	    <!-- 注冊中心客戶段 -->
 	    <dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -33,43 +33,19 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-		<!-- 服务调用 -->
-		<dependency>
+	    <!-- sentinel熔断器 -->
+	    <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <artifactId>spring-cloud-alibaba-sentinel</artifactId>
+            <version>0.2.1.RELEASE</version>
         </dependency>
-        <!-- 链路跟踪 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
-        <!-- 熔断 -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-		</dependency>
-		<!-- 健康监控 -->
+        <!-- 健康监控 -->
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!-- swaggerAPI接口管理集成 -->
-        <dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<!-- 工具包 -->
-		<dependency>
-            <groupId>com.cloud.common</groupId>
-            <artifactId>cloud-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        
+	    
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
