--- a/Cloud-ApiFirst/pom.xml
+++ b/Cloud-ApiFirst/pom.xml
@@ -76,6 +76,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- lang3工具包 -->
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
