--- a/Cloud-Service-Basics/pom.xml
+++ b/Cloud-Service-Basics/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.cloud.apifirst</groupId>
-	<artifactId>cloud-apifirst</artifactId>
+	<groupId>com.cloud.service.basics</groupId>
+	<artifactId>cloud-service-basics</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
