--- a/Cloud-RabbitMQ/src/main/resources/application.yml
+++ b/Cloud-RabbitMQ/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     virtual-host: /
     publisher-confirms: true #开启消息发送确认，默认为false,消息到达exchange确认
     publisher-returns: true #开启消息失败回调，默认false，exchange到达queue确认
+    listener:
+      simple:
+        acknowledge-mode: MANUAL #NONE：自动确认,AUTO：根据情况确认,手动确认
 
 #消息队列配置
 mq:
