--- a/Cloud-Service-Basics/pom.xml
+++ b/Cloud-Service-Basics/pom.xml
@@ -87,6 +87,13 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.58</version>
 		</dependency>
+		<!--lombok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
