--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 	  <module>Cloud-Monitor</module>
 	  <module>Cloud-Common</module>
 	  <module>Cloud-Nacos</module>
+	  <module>Cloud-Netty</module>
 	  <module>Cloud-Sentinel</module>
 	  <module>Cloud-ELK</module>
 	  <module>Cloud-GitlabCICD</module>
