--- a/Cloud-Netty/pom.xml
+++ b/Cloud-Netty/pom.xml
@@ -20,10 +20,10 @@
 
 	<dependencies>
 		<!-- 服务应用 -->
-		<dependency>  
-	        <groupId>org.springframework.boot</groupId>  
-	        <artifactId>spring-boot-starter-web</artifactId>  
-	    </dependency>
+<!--		<dependency>  -->
+<!--	        <groupId>org.springframework.boot</groupId>  -->
+<!--	        <artifactId>spring-boot-starter-web</artifactId>  -->
+<!--	    </dependency>-->
 
 		<dependency>
 			<groupId>io.netty</groupId>
