--- a/Cloud-Netty/pom.xml
+++ b/Cloud-Netty/pom.xml
@@ -19,21 +19,10 @@
 	</parent>
 
 	<dependencies>
-		<!-- 服务应用 -->
-<!--		<dependency>  -->
-<!--	        <groupId>org.springframework.boot</groupId>  -->
-<!--	        <artifactId>spring-boot-starter-web</artifactId>  -->
-<!--	    </dependency>-->
-
+        <!--netty-->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -42,6 +31,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.cloud.staff.netty.echo.EchoService</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
