--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,20 @@
 *.rar
 *.idea
 
+nbproject/private/
+build/
+nbbuild/
+target/
+logs/
+dist/
+nbdist/
+.nb-gradle/
+.idea/
+
+.DS_Store
+.mvn
+.log
+logs
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
