--- a/Cloud-Common/pom.xml
+++ b/Cloud-Common/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.cloud.common</groupId>
 	<artifactId>cloud-common</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
+
 	<name>Cloud-Common</name>
 	<description>工具包</description>
 
@@ -34,12 +34,12 @@
             <artifactId>commons-pool2</artifactId>
          </dependency>
          <!-- sevlet支持 -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <!-- <version>4.0.1</version> -->
-            <scope>provided</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>javax.servlet-api</artifactId>-->
+<!--            &lt;!&ndash; <version>4.0.1</version> &ndash;&gt;-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -62,7 +62,7 @@
             <artifactId>hutool-all</artifactId>
             <version>4.5.9</version>
         </dependency>
-        
+
 
 	</dependencies>
 
