--- a/Cloud-FastDFS/pom.xml
+++ b/Cloud-FastDFS/pom.xml
@@ -2,23 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
-	
+
+
 	<groupId>com.cloud.fastdfs</groupId>
 	<artifactId>cloud-fastdfs</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
+
 	<name>Cloud-FastDFS</name>
 	<description>文件存储系统</description>
-	
+
 	<parent>
 		<groupId>com.cloud</groupId>
 	    <artifactId>Spring-Cloud</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	
+
 
 	<dependencies>
 	    <dependency>
@@ -51,11 +51,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.7</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>commons-io</groupId>-->
+<!--            <artifactId>commons-io</artifactId>-->
+<!--            <version>2.7</version>-->
+<!--        </dependency>-->
 	</dependencies>
 
 	<dependencyManagement>
