--- a/Cloud-COLA/Cloud-Cola-Client/pom.xml
+++ b/Cloud-COLA/Cloud-Cola-Client/pom.xml
@@ -24,6 +24,14 @@
             <artifactId>cola-component-dto</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
