--- a/Cloud-COLA/Cloud-Cola-Start/pom.xml
+++ b/Cloud-COLA/Cloud-Cola-Start/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>Cloud-Cola-Adapter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
