--- a/Cloud-COLA/pom.xml
+++ b/Cloud-COLA/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Cola</name>
+    <name>Cloud-Cola</name>
     <description>Cola学习文档</description>
 
     <parent>
