--- a/Cloud-Hadoop/pom.xml
+++ b/Cloud-Hadoop/pom.xml
@@ -3,10 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cloud.mysql</groupId>
-    <artifactId>Cloud-Mysql</artifactId>
+    <artifactId>Cloud-Hadoop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Cloud-Mysql</name>
-    <description>Mysql学习文档</description>
+
+    <name>Cloud-Hadoop</name>
+    <description>Hadoop学习文档</description>
 
     <parent>
         <groupId>com.cloud</groupId>
