--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 	  <module>Cloud-RabbitMQ</module>
 	  <module>Cloud-RocketMQ</module>
 	  <module>Cloud-Mysql</module>
+	  <module>Cloud-Hadoop</module>
 	</modules>
 
 	<!-- 指定中央仓库 -->
