--- a/Cloud-COLA/generated-sources/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/Cloud-COLA/generated-sources/archetype/src/main/resources/archetype-resources/pom.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.cloud.cola</groupId>
-    <artifactId>Cloud-Cola</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>${groupId}</groupId>
+    <artifactId>${artifactId}</artifactId>
+    <version>${version}</version>
     <packaging>pom</packaging>
 
-    <name>Cloud-Cola</name>
+    <name>${artifactId}</name>
     <description>Cola学习文档</description>
 
     <parent>
@@ -22,15 +21,6 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
     </properties>
-
-    <modules>
-        <module>Cloud-Cola-Adapter</module>
-        <module>Cloud-Cola-Application</module>
-        <module>Cloud-Cola-Domain</module>
-        <module>Cloud-Cola-Facade</module>
-        <module>Cloud-Cola-Infrastructure</module>
-        <module>Cloud-Cola-Start</module>
-    </modules>
 
     <build>
         <pluginManagement>
