--- a/Cloud-Netty/pom.xml
+++ b/Cloud-Netty/pom.xml
@@ -18,17 +18,32 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
+	<properties>
+		<protobuf.version>3.15.0</protobuf.version>
+	</properties>
+
 	<dependencies>
         <!--netty-->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 		</dependency>
+
+		<!--	messagepack	-->
 		<dependency>
 			<groupId>org.msgpack</groupId>
 			<artifactId>msgpack</artifactId>
 			<version>0.6.12</version>
 		</dependency>
+
+		<!--	protobuf	-->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protobuf.version}</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -36,7 +51,18 @@
 
 	</dependencies>
 
+
+
 	<build>
+		<extensions>
+			<!--引入操作系统os设置的属性插件,否则${os.detected.classifier} 操作系统版本会找不到 -->
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.5.0.Final</version>
+			</extension>
+		</extensions>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -44,6 +70,28 @@
 				<configuration>
 					<mainClass>com.cloud.staff.netty.echo.EchoService</mainClass>
 				</configuration>
+			</plugin>
+			<plugin>
+   				<groupId>org.xolstice.maven.plugins</groupId>
+  				<artifactId>protobuf-maven-plugin</artifactId>
+   				<version>0.5.1</version>
+   				<configuration>
+      				<protocArtifact>
+         				com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
+      				</protocArtifact>
+      				<pluginId>grpc-java</pluginId>
+      				<pluginArtifact>
+						io.grpc:protoc-gen-grpc-java:1.14.0:exe:${os.detected.classifier}
+      				</pluginArtifact>
+   				</configuration>
+   				<executions>
+      				<execution>
+         				<goals>
+            				<goal>compile</goal>
+            				<goal>compile-custom</goal>
+        				 </goals>
+      				</execution>
+   				</executions>
 			</plugin>
 		</plugins>
 	</build>
