--- a/Cloud-Zookeper/src/main/resources/application.yml
+++ b/Cloud-Zookeper/src/main/resources/application.yml
@@ -10,3 +10,9 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
+zookeeper:
+  connectString: 127.0.0.1:2181
+  sessionTimeoutMs: 50000
+  baseSleepTimeMs: 1000
+  maxRetries: 3
+  connectionTimeoutMs: 50000
