--- a/Cloud-Zookeper/pom.xml
+++ b/Cloud-Zookeper/pom.xml
@@ -67,6 +67,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!--   测试     -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
 
     </dependencies>
