--- a/Cloud-MybatisPlus/pom.xml
+++ b/Cloud-MybatisPlus/pom.xml
@@ -63,6 +63,14 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+
+		<dependency>
+			<groupId>cn.smallbun.screw</groupId>
+			<artifactId>screw-core</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
